--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,8 @@
 .helvetica{ font-family: Arial, Helvetica, sans-serif;}
 .Montserrat{ font-family: Montserrat;}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+  }
