--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
-.helvetica{ font-family: Arial, Helvetica, sans-serif;}
-.Montserrat{ font-family: Montserrat;}
+.helvetica{ font-family: Arial, Helvetica, sans-serif; }
+.Montserrat{ font-family: Montserrat; max-width: 350px; display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;}
 .center {
     display: block;
     margin-left: auto;
